--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -236,10 +236,6 @@ input.navbar-search:focus {
   display: flex;
 }
 
-ul.piped.right > li > a {
-  border-right: 1px solid gray;
-}
-
 .piped {
   display: flex;
   padding: 0;
